# xxhash-c-sys

./: Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml
src/: bindings.rs  lib.rs
tests/: hash.rs
