[package]
name = "xxhash-c-sys"
version = "0.8.3"
authors = ["Douman <douman@gmx.se>"]
edition = "2018"
description = "Bindings to xxhash"
readme = "README.md"
repository = "https://github.com/DoumanAsh/xxhash-c-sys"
license = "BSL-1.0"
keywords = ["hash", "xxhash", "bindings"]
categories = ["algorithms"]
include = [
    "**/*.rs",
    "**/*.c",
    "**/*.h",
    "Cargo.toml",
    "README.md",
    "LICENSE",
]

[dependencies.libc]
version = "0.2"
default-features = false

[build-dependencies]
cc = "1"

[profile.release]
codegen-units = 1